--- a/progress.ini
+++ b/progress.ini
@@ -1,11 +1,14 @@
-new:
+not sure:
+__getitem__ using iterator
+
+added:
 self.length
-__len__, __iter__, __next__, __getitem__
-+-__eq__
+__len__, __iter__, __next__, __getitem__, __setitem__, __eq__
 index_transform, negative indices
 insert
 changed find_node
 
 to do list:
-assert
-предусловия
+DLL
+stack
+public, private
